tui/src/snapshots/estelle__tests__snapshot_composer_with_text.snap
---
source: tui/src/main.rs
expression: "rendered_frame(&app, Instant::now())"
---
"ESTELLE  ·  uqeu/estelle                                                        "
"                                                                                "
"── session · uqeu/estelle ──────────────────────────────────────────────────────"
"   uqeu/estelle · main                                                          "
"Ask about uqeu/estelle                                                          "
"                                                                                "
"/review  Read current changes                                                   "
"/sweep   Index or refresh this repo                                             "
"?        Show shortcuts                                                         "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"∷                    ∷                                                        ⠘ "
"                                                                                "
"                                                                                "
"── ask · uqeu/estelle ──────────────────────────────────────────────────────────"
"❯ trace the charge path                                                         "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  enter send · tab repo · ctrl+s spend · ctrl+m models · esc stop · ctrl+o selec"
