tui/src/snapshots/estelle__tests__snapshot_empty_composer.snap
---
source: tui/src/main.rs
assertion_line: 8018
expression: "rendered_frame(&app, Instant::now())"
---
"ESTELLE  ·  uqeu/estelle                                                        "
"                                                                                "
"── session · uqeu/estelle ──────────────────────────────────────────────────────"
"   uqeu/estelle · coach/r11-cli-integration                                     "
"Ask about uqeu/estelle                                                          "
"                                                                                "
"/review  Read current changes                                                   "
"/sweep   Index or refresh this repo                                             "
"?        Show shortcuts                                                         "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                    ⣀⣀⣀⣀⣀       "
"                                    ∷ ∷   ·   ·       · ·     ·      ⠈⠉       ∷ "
"                                                                                "
"                                                                                "
"── ask · uqeu/estelle ──────────────────────────────────────────────────────────"
"❯                                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  enter send · tab repo · ctrl+s spend · ctrl+m models · esc stop · ctrl+o selec"
