tui/src/snapshots/estelle__tests__snapshot_every_failure_screen.snap
---
source: tui/src/main.rs
expression: "rendered_frame_at_size(&app, Instant::now(), 80, 52)"
---
"ESTELLE  ·  uqeu/estelle                                                        "
"                                                                                "
"── session · uqeu/estelle ──────────────────────────────────────────────────────"
"   uqeu/estelle · main                                                          "
"■ failed                                                                        "
"Estelle rejected the stored credential.                                         "
"The API reported that this credential is not authorized.                        "
"Authenticate again, then retry the question.                                    "
"                                                                                "
"■ failed                                                                        "
"Estelle returned HTTP 502: the server returned a non-Estelle error body         "
"The failure is on the Estelle service path.                                     "
"Retry once; if it repeats, narrow the question and report the status.           "
"                                                                                "
"■ failed                                                                        "
"Estelle returned HTTP 400: repo is required                                     "
"The API refused this request as sent.                                           "
"Correct the request or account state, then retry.                               "
"                                                                                "
"■ failed                                                                        "
"The Estelle request exceeded 300 seconds.                                       "
"The server did not complete the grounded answer in time.                        "
"Retry or ask a narrower question.                                               "
"                                                                                "
"■ failed                                                                        "
"The Estelle request could not reach a response.                                 "
"The network path failed before the server returned a result.                    "
"Check connectivity and retry.                                                   "
"                                                                                "
"■ failed                                                                        "
"The request was cancelled.                                                      "
"The client stopped waiting before the server answered.                          "
"Submit the question again when ready.                                           "
"                                                                                "
"■ failed                                                                        "
"The Estelle request failed: the response body was empty                         "
"The client could not accept the server result.                                  "
"Retry; if it repeats, report this exact failure.                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"── ask · uqeu/estelle ──────────────────────────────────────────────────────────"
"❯                                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  enter send · tab repo · ctrl+s spend · ctrl+m models · esc stop · ctrl+o selec"
