tui/src/snapshots/estelle__tests__snapshot_long_running_query_with_elapsed_timer.snap
---
source: tui/src/main.rs
assertion_line: 9197
expression: "rendered_frame(&app, started + Duration::from_secs(93))"
---
"ESTELLE  ·  uqeu/estelle                                                        "
"                                                                                "
"── session · uqeu/estelle ──────────────────────────────────────────────────────"
"   uqeu/estelle · coach/r11-cli-integration                                     "
"you                                                                             "
"                                                                                "
"                                                                                "
"› Which repair changed charge.ts?                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"◐ Working · thinking · 1m 33s · still waiting for Estelle · no response received"
"                                                                                "
"── ask · uqeu/estelle ──────────────────────────────────────────────────────────"
"❯                                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  enter send · tab repo · ctrl+s spend · ctrl+m models · esc stop               "
