tui/src/snapshots/estelle__tests__snapshot_p6_citation_pane.snap
---
source: tui/src/main.rs
expression: "rendered_frame_at_size(&app, Instant::now(), 120, 30)"
---
"ESTELLE  ·  uqeu/estelle                                                                                                "
"                                                                                                                        "
"┌ CONVERSATION  Tab · Ctrl+←/→ focus ─────────────────────────────────────────────┐ ┌ CITED EVIDENCE ──────────────────┐"
"│you                                                                              │ │ 1  api/charge.ts:52              │"
"│                                                                                 │ │ 2  billing/retry.ts:118          │"
"│                                                                                 │ │                                  │"
"│› Why is this charge retried?                                                    │ │                                  │"
"│                                                                                 │ │                                  │"
"│                                                                                 │ │                                  │"
"│estelle  grounded                                                                │ │                                  │"
"│                                                                                 │ │                                  │"
"│• The retry is bounded by the idempotency guard.                                 │ │                                  │"
"│                                                                                 │ │                                  │"
"│                                                                                 │ │                                  │"
"│                                                                                 │ │                                  │"
"│                                                                                 │ │                                  │"
"│                                                                                 │ │                                  │"
"│                                                                                 │ │                                  │"
"│                                                                                 │ │                                  │"
"│                                                                                 │ │                                  │"
"│                                                                                 │ │                                  │"
"│                                                                                 │ │                                  │"
"└─────────────────────────────────────────────────────────────────────────────────┘ └──────────────────────────────────┘"
"┌ ASK ESTELLE ─────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│› Ask Estelle                                                                                                         │"
"│                                                                                                                      │"
"│  ? for shortcuts                                                                                                     │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"shift+tab change mode  ·  tab move focus  ·  / commands  |  plan  ·  routing auto                                       "
