tui/src/snapshots/estelle__tests__snapshot_p6_gate_refusal.snap
---
source: tui/src/main.rs
expression: "rendered_frame_at_size(&app, Instant::now(), 120, 32)"
---
"ESTELLE  ·  uqeu/estelle                                                                                                "
"                                                                                                                        "
"╌╌ session · uqeu/estelle ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                 ┌ gate · deterministic · no model ───────────────────────────────────────────────────┐                 "
"                 │                                    EDIT REFUSED                                    │                 "
"                 │                Gate protected this repository. Nothing was written.                │                 "
"                 │Verdict  blocked                                                                    │                 "
"                 │ blast radius · 2 files · 6 changed lines                                           │                 "
"                 │⠁                                                                                   │                 "
"                 │                                                                                    │                 "
"                 │                                                                                    │                 "
"                 │                                                                                   ⢀│                 "
"                 │                                                                                    │                 "
"                 │     5  api/charge.ts                                                               │                 "
"                 │     1  billing/retry.ts                                                            │                 "
"                 │blocked  api/charge.ts:52  invented call rotate_all_keys does not exist             │                 "
"                 │                                                                                    │                 "
"                 │                                                                                    │                 "
"                 │                                                                                    │                 "
"                 │                          Enter or Esc closes · Ask Estelle                         │                 "
"                 └────────────────────────────────────────────────────────────────────────────────────┘                 "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"tab focus · shift+tab autonomy · ctrl+t tasks · alt+m context · / commands  |  plan  ·  routing auto                    "
