tui/src/snapshots/estelle__tests__snapshot_p6_sweep_gauge.snap
---
source: tui/src/main.rs
expression: "rendered_frame(&app, Instant::now())"
---
"ESTELLE  ·  uqeu/estelle                                                        "
"                                                                                "
"── session · uqeu/estelle ──────────────────────────────────────────────────────"
"   uqeu/estelle · coach/r11-cli-integration                                     "
"sweep  sending complete source set · 35% · 184 files · 891 KB                   "
"████████████████████████████          35%                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"● Ready                                                                         "
"                                                                                "
"── ask · uqeu/estelle ──────────────────────────────────────────────────────────"
"                                                                                "
"〉                                                                              " Hidden by multi-width symbols: [(1, " ")]
"  enter send · tab repo · ctrl+s spend · ctrl+m models · esc stop               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
