tui/src/snapshots/estelle__tests__snapshot_slash_menu_open.snap
---
source: tui/src/main.rs
expression: "rendered_frame(&app, Instant::now())"
---
"ESTELLE  ·  uqeu/estelle                                                        "
"                                                                                "
"── session · uqeu/estelle ──────────────────────────────────────────────────────"
"   uqeu/estelle · main                                                          "
"Ask about uqeu/estelle                                                          "
"                                                                                "
"/review  Read current changes                                                   "
"/sweep   Index or refresh this repo                                             "
"                                                                                "
"                                                                                "
"── ask · uqeu/estelle ──────────────────────────────────────────────────────────"
"❯ /mo                                                                           "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  /mode         read or lower the server autonomy ceiling                       "
"  /model        browse your BYOK model pool                                     "
"  /memory       what Estelle knows here; /memory left is your capacity          "
"  /memories     the held-memory listing with trust tiers                        "
"  /improve      rank grounded improvements for this repo                        "
"  /automations  stored gated agents — with their live/firing state              "
"  /permissions  view the effective autonomy boundary                            "
"  enter send · tab repo · ctrl+s spend · ctrl+g context · esc stop · ctrl+o sele"
